Fix preview nav z-index

--- a/preview/assets/main.css
+++ b/preview/assets/main.css
@@ -74,7 +74,7 @@ body {
 .dx-preview-navbar {
   backdrop-filter: blur(10px);
   position: sticky;
-  z-index: 1000;
+  z-index: 10;
   top: 0;
   display: flex;
   width: 100%;
